# agentic-ecom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEMO.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.claude/: launch.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/voltti_backend/: abuse.py  config.py  db.py  guard_client.py  main.py  models.py  observability.py  ratelimit.py  security.py
backend/src/voltti_backend/agent/: agent.py  output_validation.py  policy.py  prompt.md
backend/src/voltti_backend/api/: routes.py
backend/src/voltti_backend/domain/: builds.py  catalog.py  compat.py  format.py  orders.py
backend/tests/: conftest.py  test_abuse.py  test_api.py  test_guard_screen.py  test_observability.py  test_output_validation.py  test_parity.py  test_ratelimit.py
backend/tests/fixtures/: parity.json
data/: catalog.json  users.json
deploy/nginx/: voltti.conf
docs/: README.md  agent-contract.md  architecture.md  design.md  features.md  layer-classification.md  runbook.md  security-implementation-plan.md  security-implementation.md  security-principles.md  target-architecture.md
docs/research/: llm-abuse-prevention-research-report.md
guard/: .env.example  Dockerfile  pyproject.toml
guard/src/voltti_guard/: classify.py  config.py  main.py
guard/tests/: test_classify.py
scripts/: dev.sh  extract-seed-data.ts  generate-parity-fixtures.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: catalog-browser.tsx  commerce-experience.tsx  compare-tray.tsx  header.tsx  product-card.tsx  product-visual.tsx
src/lib/: api.ts  catalog.ts  orders.ts  services.ts  session.ts  shop-context.tsx  types.ts  (+2 more)
(+13 files in other folders)
