[project]
name = "voltti-backend"
version = "0.1.0"
description = "Voltti agent + domain backend: Pydantic AI agent over AG-UI, FastAPI REST API, SQLite."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic-ai-slim[ag-ui,anthropic,openai,google]>=1.107.0",
    "sqlmodel>=0.0.24",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voltti_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
